// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionList renders with different data types renders default 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F9F8FD",
          },
          {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
            "padding": 10,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#404040",
            },
            {
              "fontFamily": "Poppins-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            },
            {
              "flex": 1,
              "marginHorizontal": 10,
              "textAlign": "left",
            },
            undefined,
          ]
        }
      >
        title
      </Text>
      <View
        style={
          [
            {
              "backgroundColor": "#F5F4F6",
            },
            {
              "borderRadius": 3,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#D7D1E9",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                {
                  "backgroundColor": "transparent",
                },
                {
                  "transform": [
                    {
                      "rotateZ": "0deg",
                    },
                  ],
                },
              ],
              {
                "fontFamily": "Octicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 0,
        },
        {
          "overflow": "hidden",
        },
      ]
    }
  >
    <RCTScrollView
      bounces={false}
      data={
        [
          {
            "content": "content1",
            "title": "title1",
          },
          {
            "content": "content2",
            "title": "title2",
          },
          {
            "content": "content3",
            "title": "title3",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title1
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title2
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title3
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`AccordionList renders with different data types renders with string array data 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F9F8FD",
          },
          {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
            "padding": 10,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#404040",
            },
            {
              "fontFamily": "Poppins-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            },
            {
              "flex": 1,
              "marginHorizontal": 10,
              "textAlign": "left",
            },
            undefined,
          ]
        }
      >
        title
      </Text>
      <View
        style={
          [
            {
              "backgroundColor": "#F5F4F6",
            },
            {
              "borderRadius": 3,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#D7D1E9",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                {
                  "backgroundColor": "transparent",
                },
                {
                  "transform": [
                    {
                      "rotateZ": "0deg",
                    },
                  ],
                },
              ],
              {
                "fontFamily": "Octicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 0,
        },
        {
          "overflow": "hidden",
        },
      ]
    }
  >
    <RCTScrollView
      bounces={false}
      data={
        [
          "title1",
          "title2",
          "title3",
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`AccordionList renders with different styles renders with custom style 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F9F8FD",
          },
          {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
            "padding": 10,
          },
          {
            "backgroundColor": "green",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#404040",
            },
            {
              "fontFamily": "Poppins-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            },
            {
              "flex": 1,
              "marginHorizontal": 10,
              "textAlign": "left",
            },
            {
              "color": "blue",
              "fontSize": 20,
            },
          ]
        }
      >
        title
      </Text>
      <View
        style={
          [
            {
              "backgroundColor": "#F5F4F6",
            },
            {
              "borderRadius": 3,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#D7D1E9",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                {
                  "backgroundColor": "transparent",
                },
                {
                  "transform": [
                    {
                      "rotateZ": "0deg",
                    },
                  ],
                },
              ],
              {
                "fontFamily": "Octicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 0,
        },
        {
          "overflow": "hidden",
        },
      ]
    }
  >
    <RCTScrollView
      bounces={false}
      data={
        [
          {
            "content": "content1",
            "title": "title1",
          },
          {
            "content": "content2",
            "title": "title2",
          },
          {
            "content": "content3",
            "title": "title3",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  {
                    "backgroundColor": "red",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    {
                      "color": "yellow",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                title1
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  {
                    "backgroundColor": "red",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    {
                      "color": "yellow",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                title2
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  {
                    "backgroundColor": "red",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    {
                      "color": "yellow",
                      "fontSize": 15,
                    },
                  ]
                }
              >
                title3
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`AccordionList renders with different styles renders with default style 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F9F8FD",
          },
          {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
            "padding": 10,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#404040",
            },
            {
              "fontFamily": "Poppins-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            },
            {
              "flex": 1,
              "marginHorizontal": 10,
              "textAlign": "left",
            },
            undefined,
          ]
        }
      >
        title
      </Text>
      <View
        style={
          [
            {
              "backgroundColor": "#F5F4F6",
            },
            {
              "borderRadius": 3,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#D7D1E9",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                {
                  "backgroundColor": "transparent",
                },
                {
                  "transform": [
                    {
                      "rotateZ": "0deg",
                    },
                  ],
                },
              ],
              {
                "fontFamily": "Octicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 0,
        },
        {
          "overflow": "hidden",
        },
      ]
    }
  >
    <RCTScrollView
      bounces={false}
      data={
        [
          {
            "content": "content1",
            "title": "title1",
          },
          {
            "content": "content2",
            "title": "title2",
          },
          {
            "content": "content3",
            "title": "title3",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title1
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title2
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title3
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`AccordionList renders with icons renders with left icon prop 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F9F8FD",
          },
          {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
            "padding": 10,
          },
          undefined,
        ]
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "dimgrey",
              "fontSize": 24,
            },
            undefined,
            {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        theme={
          {
            "black": "#000000",
            "darkWhite": "#FDFCFF",
            "disabledDark": "#BDBCBF",
            "disabledLight": "#D7D1E9",
            "disabledLightDark": "#F6F6F6",
            "error": "#FF3434",
            "focused": "#654FA6",
            "grey": "#9A9A9A",
            "lightBlack": "#404040",
            "lightGrey": "#F5F4F6",
            "primary": "#8973CD",
            "primary15": "#EDEAF8",
            "primary30": "#DCD5F0",
            "primary5": "#F9F8FD",
            "secondary": "#82B98E",
            "success": "#09CE63",
            "tertiary": "#67A7C1",
            "white": "#FFFFFF",
          }
        }
        typography={
          {
            "body": {
              "medium": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              },
              "regular": {
                "fontFamily": "Poppins-Regular",
                "fontSize": 14,
                "lineHeight": 16,
              },
              "smedium": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 12,
                "lineHeight": 18,
              },
              "sregular": {
                "fontFamily": "Poppins-Regular",
                "fontSize": 12,
                "lineHeight": 16,
              },
              "xsmedium": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 10,
                "lineHeight": 16,
              },
              "xsregular": {
                "fontFamily": "Poppins-Regular",
                "fontSize": 10,
                "lineHeight": 14,
              },
              "xxsmedium": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 8,
                "lineHeight": 12,
              },
              "xxsregular": {
                "fontFamily": "Poppins-Regular",
                "fontSize": 8,
                "lineHeight": 12,
              },
            },
            "heading": {
              "h1": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 30,
                "lineHeight": 45,
              },
              "h2": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 28,
                "lineHeight": 42,
              },
              "h3": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 23,
                "lineHeight": 35,
              },
              "h4": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 19,
                "lineHeight": 29,
              },
              "h5": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 16,
                "lineHeight": 25,
              },
            },
          }
        }
      >
        󰧱
      </Text>
      <Text
        style={
          [
            {
              "color": "#404040",
            },
            {
              "fontFamily": "Poppins-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            },
            {
              "flex": 1,
              "marginHorizontal": 10,
              "textAlign": "left",
            },
            undefined,
          ]
        }
      >
        title
      </Text>
      <View
        style={
          [
            {
              "backgroundColor": "#F5F4F6",
            },
            {
              "borderRadius": 3,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#D7D1E9",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                {
                  "backgroundColor": "transparent",
                },
                {
                  "transform": [
                    {
                      "rotateZ": "0deg",
                    },
                  ],
                },
              ],
              {
                "fontFamily": "Octicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 0,
        },
        {
          "overflow": "hidden",
        },
      ]
    }
  >
    <RCTScrollView
      bounces={false}
      data={
        [
          {
            "content": "content1",
            "title": "title1",
          },
          {
            "content": "content2",
            "title": "title2",
          },
          {
            "content": "content3",
            "title": "title3",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title1
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title2
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title3
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`AccordionList renders with icons renders with right icon prop 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#F9F8FD",
          },
          {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
            "padding": 10,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#404040",
            },
            {
              "fontFamily": "Poppins-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            },
            {
              "flex": 1,
              "marginHorizontal": 10,
              "textAlign": "left",
            },
            undefined,
          ]
        }
      >
        title
      </Text>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "dimgrey",
              "fontSize": 24,
            },
            undefined,
            {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        theme={
          {
            "black": "#000000",
            "darkWhite": "#FDFCFF",
            "disabledDark": "#BDBCBF",
            "disabledLight": "#D7D1E9",
            "disabledLightDark": "#F6F6F6",
            "error": "#FF3434",
            "focused": "#654FA6",
            "grey": "#9A9A9A",
            "lightBlack": "#404040",
            "lightGrey": "#F5F4F6",
            "primary": "#8973CD",
            "primary15": "#EDEAF8",
            "primary30": "#DCD5F0",
            "primary5": "#F9F8FD",
            "secondary": "#82B98E",
            "success": "#09CE63",
            "tertiary": "#67A7C1",
            "white": "#FFFFFF",
          }
        }
        typography={
          {
            "body": {
              "medium": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              },
              "regular": {
                "fontFamily": "Poppins-Regular",
                "fontSize": 14,
                "lineHeight": 16,
              },
              "smedium": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 12,
                "lineHeight": 18,
              },
              "sregular": {
                "fontFamily": "Poppins-Regular",
                "fontSize": 12,
                "lineHeight": 16,
              },
              "xsmedium": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 10,
                "lineHeight": 16,
              },
              "xsregular": {
                "fontFamily": "Poppins-Regular",
                "fontSize": 10,
                "lineHeight": 14,
              },
              "xxsmedium": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 8,
                "lineHeight": 12,
              },
              "xxsregular": {
                "fontFamily": "Poppins-Regular",
                "fontSize": 8,
                "lineHeight": 12,
              },
            },
            "heading": {
              "h1": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 30,
                "lineHeight": 45,
              },
              "h2": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 28,
                "lineHeight": 42,
              },
              "h3": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 23,
                "lineHeight": 35,
              },
              "h4": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 19,
                "lineHeight": 29,
              },
              "h5": {
                "fontFamily": "Poppins-Medium",
                "fontSize": 16,
                "lineHeight": 25,
              },
            },
          }
        }
      >
        󰧱
      </Text>
      <View
        style={
          [
            {
              "backgroundColor": "#F5F4F6",
            },
            {
              "borderRadius": 3,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          allowFontScaling={false}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "#D7D1E9",
                "fontSize": 20,
              },
              [
                {
                  "lineHeight": 20,
                },
                {
                  "backgroundColor": "transparent",
                },
                {
                  "transform": [
                    {
                      "rotateZ": "0deg",
                    },
                  ],
                },
              ],
              {
                "fontFamily": "Octicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": 0,
        },
        {
          "overflow": "hidden",
        },
      ]
    }
  >
    <RCTScrollView
      bounces={false}
      data={
        [
          {
            "content": "content1",
            "title": "title1",
          },
          {
            "content": "content2",
            "title": "title2",
          },
          {
            "content": "content3",
            "title": "title3",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title1
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title2
              </Text>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              entering={BaseAnimationMock {}}
              exiting={BaseAnimationMock {}}
              style={
                [
                  {
                    "padding": 10,
                  },
                  {
                    "backgroundColor": "#F9F8FD",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#9A9A9A",
                      "textAlign": "center",
                    },
                    {
                      "fontFamily": "Poppins-Medium",
                      "fontSize": 12,
                      "lineHeight": 18,
                    },
                    undefined,
                  ]
                }
              >
                title3
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    entering={BaseAnimationMock {}}
    exiting={BaseAnimationMock {}}
    layout={BaseAnimationMock {}}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "height": 100,
          "paddingHorizontal": 24,
          "width": "100%",
          "zIndex": 100,
        },
        {
          "alignSelf": "center",
          "top": 150,
        },
        undefined,
        {
          "backgroundColor": "transparent",
          "marginTop": -110,
          "position": "absolute",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 18,
            "marginTop": 21,
            "width": 28,
            "zIndex": 100,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
            "zIndex": 100,
          }
        }
      >
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "500",
                "marginTop": 17,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
        <Text
          ellipsizeMode="middle"
          numberOfLines={3}
          style={
            [
              {
                "fontWeight": "400",
                "marginTop": 6,
                "paddingHorizontal": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
